assert(!m->is_old() || ik()->is_being_redefined()) failed: old methods should not be in vtable

XMLWordPrintable

    • b26

      # Symptom

      ```
      IsModifiableClassAgent started
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/klassVtable.cpp:564
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/root/df/jdk/src/hotspot/share/oops/klassVtable.cpp:564), pid=10502, tid=10505
      # assert(!m->is_old() || ik()->is_being_redefined()) failed: old methods should not be in vtable
      #
      # JRE version: OpenJDK Runtime Environment TencentKonaJDK (16.0+4) (fastdebug build 16-internal+4-adhoc.root.jdk)
      # Java VM: OpenJDK 64-Bit Server VM TencentKonaJDK (fastdebug 16-internal+4-adhoc.root.jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x10fdc84] klassVtable::put_method_at(Method*, int)+0x2e4
      ```

      # Reproduce

      jtreg run: java/lang/instrument/IsModifiableClassAgent.java

            Assignee:
            Coleen Phillimore
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: