8256640: assert(!m->is_old() || ik()->is_being_redefined()) failed: old methods should not be in vtable